--- a/index.html
+++ b/index.html
@@ -1,66 +1,133 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
+  <head>
     <title>Assignment-1</title>
-    <link rel="stylesheet" href="style.css">
-</head>
-<body>
-        <div class="main_topnav">
-            <a class="topnav" href="#home">About</a>
-            <a class="topnav" href="#news">Work</a>
-            <a class="topnav" href="#contact">Portfolio</a>
-            <a class="topnav" href="#about">Contact</a>
-        </div>
+    <link rel="stylesheet" href="style.css" />
+  </head>
+  <body>
 
-    <section>
-        <div class="half-width">
-            <br> <br> <br> <br>
-            <h1>HELLO I'M</h1>
-            <h1><span class="orange"> BILL GATES </span></h1>
-            <p>A full stack allaround designer that placerat </p>
-            <p> in massa consectetur</p>
-            <br/> <br/>
-            <a class="button" target="_blank" href="http://">Hire Me</a>
-        </div>
 
-        <div class="half-width">
-            <img src="images/me1.png" alt="" height="600px" width="500px">
-        </div>
+    <nav class="main_topnav">
+      <a class="topnav" href="#home">About</a>
+      <a class="topnav" href="#news">Work</a>
+      <a class="topnav" href="#contact">Portfolio</a>
+      <a class="topnav" href="#about">Contact</a>
+    </nav>
 
+    <section class="yaap">
+      <div class="half-width">
+        <div class="goat">
+            <button>
+              <audio controls loop>
+                <source src="goat.mp3" type="audio/ogg" />
+                <source src="goat.mp3" type="audio/mpeg" />
+              </audio>
+            </button>
+            <p class="love">click to listen your voice</p>
+          </div>
+        <br />
+        <br />
+        <br />
+        <br />
+        <h1>HELLO I'M</h1>
+        <h1><span class="orange"> BILL GATES </span></h1>
+        <p>A full stack allaround designer that placerat</p>
+        <p>in massa consectetur</p>
+        <br />
+        <br />
+        <a class="button" target="_blank" href="http://">Hire Me</a>
+      </div>
+
+      <div class="half-width">
+        <img src="images/me1.png" alt="" height="600px" width="500px" />
+      </div>
     </section>
-    <section>
-        <div class="half-width">
-            <img id="any" src="images/me.png" alt="" height="600px" width="500px">
-        </div>
+    <section class="yaap">
+      <div class="half-width">
+        <img id="any" src="images/me.png" alt="" height="600px" width="500px" />
+      </div>
 
-        <div class="half-width">
-            <br> <br> <br> <br> <br> <br> <br> <br>
-            <h1>ABOUT</h1>
-            <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</p>
-            <br> <br>
-            <a class="button" target="_blank" href="https://"><img alt="" >Download CV</a>           
-        </div>
+      <div class="half-width">
+        <br />
+        <br />
+        <br />
+        <br />
+        <br />
+        <br />
+        <br />
+        <br />
+        <h1>ABOUT</h1>
+        <p>
+          Lorem Ipsum is simply dummy text of the printing and typesetting
+          industry. Lorem Ipsum has been the industry's standard dummy text ever
+          since the 1500s, when an unknown printer took a galley of type and
+          scrambled it to make a type specimen book.
+        </p>
+        <br />
+        <br />
+        <a class="button" target="_blank" href="https://"
+          ><img alt="" />Download CV</a
+        >
+      </div>
     </section>
-
 
     <section class="low-part">
-        <br> <br> 
-        <h2 id="position"><span class="color">LATEST</span> WORKING PROJECT</h2>
-        <div class="width single-project">
-            <img src="images/image 4.png" height="65%" width="100%" alt="">
-            <h3><a href="#"> Power-x-gym (gym website)</a></h3>
-            <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
-        </div>
-        <div class="width single-project">
-            <img src="images/image 5.png" height="65%" width="100%" alt="">
-            <h3><a href="#"> Creative Agency</a></h3>
-            <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
-        </div>
-        <div class="width single-project" id="baby-web">
-            <img src="images/image 8.png" height="65%" width="100%" alt="">
-            <h3><a href="#"> Hard Rock Music</a></h3>
-            <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
-        </div>
-    </section>    
-</body>
+      <br />
+      <br />
+      <h2 id="position"><span class="color">LATEST</span> WORKING PROJECT</h2>
+      <div class="width single-project">
+        <img src="images/image 4.png" height="65%" width="100%" alt="" />
+        <h3><a href="#"> Power-x-gym (gym website)</a></h3>
+        <p>
+          Lorem Ipsum is simply dummy text of the printing and typesetting
+          industry.
+        </p>
+      </div>
+      <div class="width single-project">
+        <img src="images/image 5.png" height="65%" width="100%" alt="" />
+        <h3><a href="#"> Creative Agency</a></h3>
+        <p>
+          Lorem Ipsum is simply dummy text of the printing and typesetting
+          industry.
+        </p>
+      </div>
+      <div class="width single-project" id="baby-web">
+        <img src="images/image 8.png" height="65%" width="100%" alt="" />
+        <h3><a href="#"> Hard Rock Music</a></h3>
+        <p>
+          Lorem Ipsum is simply dummy text of the printing and typesetting
+          industry.
+        </p>
+      </div>
+    </section>
+
+    <section class="bottom-part">
+      <div class="last">
+        <h2><span id="text-color"> WORK INQUIRY </span></h2>
+      </div>
+      <div class="last" id="link">
+        <a class="link-button" target="_blank" href="https://www.linkedin.com/"
+          ><h2 id="this">Let's Chat</h2></a
+        >
+      </div>
+    </section>
+    <section class="footer">
+      <h3>DON'T CONTACT</h3>
+      <h2>goodbye@design.com</h2>
+      <div class="icons">
+        <a target="_blank" href="https://dribbble.com/"
+          ><img src="images/image 6.png" alt="" height="50px" width="50px"
+        /></a>
+        <a target="_blank" href="https://www.behance.net/"
+          ><img src="images/image 7.png" alt="" height="50px" width="50px"
+        /></a>
+        <a target="_blank" href="https://www.instagram.com/"
+          ><img src="images/Group 33059.png" alt="" height="50px" width="50px"
+        /></a>
+      </div>
+    </section>
+    <footer>
+      <p>©אני אוהב את בנגלדש</p>
+    </footer>
+  </body>
 </html>
